--- a/templates/inventario/compras/modal/compraFormModal.html
+++ b/templates/inventario/compras/modal/compraFormModal.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <h3>Listado de insumos</h3>
+    <h3>Listado de z</h3>
 </div>
 <div class="action d-flex flex-wrap justify-content-end">
     <button data-bs-dismiss="modal" class="main-btn danger-btn-outline btn-hover m-1">
