--- a/templates/inventario/compras/addCompra.html
+++ b/templates/inventario/compras/addCompra.html
@@ -28,19 +28,31 @@
                         fila.append($('<td>').text(objeto.fields.descripcion));
                         fila.append($('<td>').text(objeto.fields.cantidad));
                         var boton = $('<button>');
-                        if (objeto.fields.cantidad== 0) {
-                            boton.prop('disabled',true).addClass('btn btn-danger').text('Agotado');
-                        }else{
-                           boton.prop('disabled',false).addClass('btn btn-primary').text('Agregar');
+                        if (objeto.fields.cantidad == 0) {
+                            boton.prop('disabled', true).addClass('btn btn-danger').text('Agotado');
+                        } else {
+                            boton.prop('disabled', false).addClass('btn btn-primary').text('Agregar');
                         }
 
                         boton.click(function () {
+
+                            // Verificar si el producto ya está en la tabla
+                            if ($('#tablaPrincipal td:first-child').filter(function () {
+                                return $(this).text() === objeto.fields.descripcion;
+                            }).length) {
+                                swal.fire('Este producto ya ha sido registrado');
+                                return;
+                            }
+
                             // Agregar la información a la tabla principal
-                            var filaPrincipal = $('<tr>');
-                            filaPrincipal.append($('<td>').text(objeto.fields.descripcion));
+                            var filaPrincipal = $('<tr id=' + objeto.pk + '>');
+                            filaPrincipal.append($('<td>').text(objeto.fields.descripcion).addClass('min-width')).append($('<input class="insumos[]" type="hidden" value=' + objeto.pk + '>'));
+
                             filaPrincipal.append($('<td>').text(objeto.fields.precio_venta));
-                            filaPrincipal.append($('<td>').append($('<input type="number" value="1" min=0 max='+objeto.fields.cantidad+' name = cantidad_'+objeto.pk+' id = id_cantidad_'+objeto.pk+' class="form-control w-25"  >')));
-                            filaPrincipal.append($('<td>').html(' <div class="action justify-content-center"> <a href="Javascript:void(0);" class="text-danger"><i class="lni lni-trash-can"></i> </a>  </div>'));
+                            filaPrincipal.append($('<td>').append($('<input type="number" value="1" min=0 max=' + objeto.fields.cantidad + ' name = cantidad_' + objeto.pk + ' id = id_cantidad_' + objeto.pk + ' class="form-control "  >')));
+                            filaPrincipal.append($('<td>').append($('<input type="text" name = total_' + objeto.pk + ' id = id_total_' + objeto.pk + ' class="form-control " disabled  >')));
+
+                            filaPrincipal.append($('<td>').html(' <div class="action justify-content-center"> <a href="Javascript:void(0);" class="text-danger eliminar"><i class="lni lni-trash-can"></i> </a>  </div>'));
                             $('#tablaPrincipal tbody').append(filaPrincipal);
                         });
                         fila.append($('<td>').append(boton));
@@ -58,7 +70,12 @@
             $('#id_busqueda').keyup(function () {
                 consultar()
             });
+
+            $('#tablaPrincipal').on('click', '.eliminar', function () {
+                $(this).closest('tr').remove();
+            });
         });
+
 
     </script>
 
@@ -129,7 +146,8 @@
                                     {% endif %}
 
                                     {% if field.help_text %}
-                                        <small id="help" class="form-text text-muted">{{ field.help_text|safe }}</small>
+                                        <small id="help"
+                                               class="form-text text-muted ">{{ field.help_text|safe }}</small>
                                     {% endif %}
                                     {% for error in field.errors %}
                                         <div class="error-message text-danger">
@@ -149,17 +167,17 @@
                         <table class="table" id="tablaPrincipal">
                             <thead class="table-light">
                             <tr>
-                                <th>Insumo</th>
-                                <th>Precio</th>
-                                <th>Cantidad</th>
-                                <th>Total</th>
+                                <th class="w-25">Insumo</th>
+                                <th class="w-25">Precio</th>
+                                <th class="w-25">Cantidad</th>
+                                <th class="w-25">SubTotal</th>
                                 <th>
                                     <div class="action justify-content-center">
 
                                         <a href="Javascript:void(0);" class="main-btn primary-btn btn-hover btn-sm"
                                            data-bs-toggle="modal" data-bs-target="#formularioModal"
                                            class="main-btn primary-btn btn-hover btn-sm">
-                                            <i class="lni lni-plus mr-5"></i>
+                                            <i class="lni lni-plus mr-5 "></i>
                                         </a>
 
                                     </div>
