--- a/templates/inventario/ventas/salida_insumo_view.html
+++ b/templates/inventario/ventas/salida_insumo_view.html
@@ -1,14 +1,30 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block title %}Insumos{% endblock %}
+{% block extra_head %}
+
+
+{% endblock %}
 
 {% block content %}
+
+
     <!-- ========== title-wrapper start ========== -->
     <div class="title-wrapper pt-30">
         <div class="row align-items-center">
             <div class="col-md-6">
-                <div class="title mb-30">
-                    <h2>Salida de Insumos</h2>
+                <div class="title d-flex align-items-center flex-wrap mb-30">
+                    <h2 class="mr-40">Ventas de Insumos</h2>
+                    <a type="button" id="d_button" href="{% url 'inventario:add_venta' %}"
+                            class="main-btn primary-btn btn-hover btn-sm">
+                        <i class="lni lni-plus mr-5"></i> Adicionar
+                    </a>
+
+{#                    <button type="button" id="d_button" data-bs-toggle="modal" data-bs-target="#exampleModal"#}
+{#                            onclick="abrirFormularioModal('{% url 'inventario:add_compra' %}');"#}
+{#                            class="main-btn primary-btn btn-hover btn-sm">#}
+{#                        <i class="lni lni-plus mr-5"></i> Adicionar#}
+{#                    </button>#}
                 </div>
             </div>
             <!-- end col -->
@@ -21,11 +37,11 @@
                             </li>
 
                             <li class="breadcrumb-item ">
-                                <a href="{% url 'inventario:inventario' %}">Inventarios</a>
+                                <a href="{% url 'inventario:inventario' %}">Inventario</a>
                             </li>
 
                             <li class="breadcrumb-item active" aria-current="page">
-                                Salida de insumos
+                                Salidas
                             </li>
 
                         </ol>
@@ -36,64 +52,33 @@
         </div>
         <!-- end row -->
     </div>
-
-    <!-- ========== title-wrapper end ========== -->
-
-
-
     <!-- ========== tables-wrapper start ========== -->
     <div class="tables-wrapper">
 
-        <!-- ========== option-header start ========== -->
-        <div class="row pb-3">
-            <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                    Configuraciones
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-
-
-                </ul>
-            </div>
-
-
-        </div>
-        <!-- ========== option-header end ========== -->
         <div class="row">
             <div class="col-lg-12">
                 <div class="card-style mb-30">
-                    <h6 class="mb-10">Insumos</h6>
-                    <p class="text-sm mb-20">
-
-                    </p>
+                    <h6 class="mb-10">Listado de ventas</h6>
+                    <p class="text-sm mb-20"></p>
                     <div class="table-wrapper table-responsive">
-
                         <table class="table top-selling-table">
                             <thead>
                             <tr>
                                 <th>
-                                    <h6 class="text-sm text-medium">Cod.</h6>
+                                    <h6 class="text-sm text-medium">N°.</h6>
                                 </th>
                                 <th>
-                                    <h6 class="text-sm text-medium">Descripción</h6>
+                                    <h6 class="text-sm text-medium">Fecha</h6>
                                 </th>
-                                <th class="min-width">
-                                    <h6 class="text-sm text-medium">
-                                        unidad de medida
-                                    </h6>
+                                <th>
+                                    <h6 class="text-sm text-medium">Cliente</h6>
                                 </th>
-                                <th class="min-width">
-                                    <h6 class="text-sm text-medium">
-                                        Mínimo
-                                    </h6>
+                                <th>
+                                    <h6 class="text-sm text-medium">Subtotal</h6>
                                 </th>
-                                <th class="min-width">
-                                    <h6 class="text-sm text-medium">
-                                        Máximo
-                                    </h6>
+                                <th>
+                                    <h6 class="text-sm text-medium">Total</h6>
                                 </th>
-
                                 <th>
                                     <h6 class="text-sm text-medium text-end">
                                         Acciones
@@ -102,59 +87,65 @@
                             </tr>
                             </thead>
                             <tbody>
+                            {% for venta in ventas %}
 
-                            <tr>
-                                <td>
-                                    <div class="product">
-                                        <div class="image">
-                                            <img
-                                                    src="assets/images/products/product-mini-2.jpg"
-                                                    alt=""
-                                            />
+                                <tr>
+                                    <td>
+                                        {{ forloop.counter }}
+                                    </td>
+                                    <td>
+                                        <p class="text-sm">{{ venta.fecha }}</p>
+                                    </td>
+
+                                    <td>
+                                        <p class="text-sm">{{ venta.cliente }}</p>
+                                    </td>
+
+
+                                    <td>
+                                        <p class="text-sm">{{ venta.subtotal }}</p>
+                                    </td>
+
+
+                                    <td>
+                                        <p class="text-sm">{{ venta.total }}</p>
+                                    </td>
+                                    <td>
+                                        <div class="action justify-content-end">
+
+                                            <button
+                                                    class="more-btn ml-10 dropdown-toggle"
+                                                    id="moreAction1"
+                                                    data-bs-toggle="dropdown"
+                                                    aria-expanded="false"
+                                            >
+                                                <i class="lni lni-more-alt"></i>
+                                            </button>
+                                            <ul
+                                                    class="dropdown-menu dropdown-menu-end"
+                                                    aria-labelledby="moreAction1"
+                                            >
+                                                <li class="dropdown-item">
+                                                    <a href="{% url 'inventario:delete_categoria' venta.pk %}"
+
+                                                       class="text-gray">Eliminar</a>
+                                                </li>
+                                                <li class="dropdown-item">
+                                                    <a href="{% url 'inventario:edit_compra' venta.pk %}"
+                                                       class="text-gray">Editar</a>
+                                                </li>
+                                            </ul>
                                         </div>
-                                        <p class="text-sm">Arm Chair</p>
-                                    </div>
-                                </td>
-                                <td>
-                                    <p class="text-sm">Interior</p>
-                                </td>
-                                 <td>
-                                    <p class="text-sm">Interior</p>
-                                </td>
+                                    </td>
+                                </tr>
 
-                                <td>
-                                    <p class="text-sm">$345</p>
-                                </td>
-                                <td>
-                                    <span class="status-btn warning-btn">Refund</span>
-                                </td>
-                                <td>
-                                    <div class="action justify-content-end">
-                                        <button class="edit">
-                                            <i class="lni lni-pencil"></i>
-                                        </button>
-                                        <button
-                                                class="more-btn ml-10 dropdown-toggle"
-                                                id="moreAction1"
-                                                data-bs-toggle="dropdown"
-                                                aria-expanded="false"
-                                        >
-                                            <i class="lni lni-more-alt"></i>
-                                        </button>
-                                        <ul
-                                                class="dropdown-menu dropdown-menu-end"
-                                                aria-labelledby="moreAction1"
-                                        >
-                                            <li class="dropdown-item">
-                                                <a href="#0" class="text-gray">Remove</a>
-                                            </li>
-                                            <li class="dropdown-item">
-                                                <a href="#0" class="text-gray">Edit</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </td>
-                            </tr>
+
+                            {% empty %}
+                                <tr>
+                                    <td> No existen registros</td>
+                                </tr>
+                            {% endfor %}
+
 
                             </tbody>
                         </table>
@@ -162,6 +153,7 @@
                     </div>
                 </div>
                 <!-- end card -->
+              {% include "paginador_snippet.html" %}
             </div>
             <!-- end col -->
         </div>
@@ -169,4 +161,50 @@
 
     </div>
     <!-- ========== tables-wrapper end ========== -->
+
+
+
+{% endblock %}
+
+
+
+{% block javascript %}
+    <script>
+       function abrirFormularioModal(url) {
+            $.ajax({
+                url: url,
+                success: function (data) {
+                    $('#formularioModal .content').html(data);
+                    $('#formularioModal').modal({backdrop: 'static'}).modal('show');
+                }
+            });
+        }
+    </script>
+{% endblock %}
+
+
+
+
+{% block modals %}
+<div class="modal fade static" id="formularioModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+            <div class="modal-content card-style">
+                <div class="modal-header px-0 border-0">
+                    <h5 class="text-bold">{{ titulo }}</h5>
+                    <button class="border-0 bg-transparent h1" data-bs-dismiss="modal">
+                        <i class="lni lni-cross-circle"></i>
+                    </button>
+                </div>
+                <div class="modal-body px-0">
+
+                    <div class="content mb-30">
+
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
