--- a/templates/inventario/ventas/salida_insumo_view.html
+++ b/templates/inventario/ventas/salida_insumo_view.html
@@ -118,7 +118,7 @@
                                                     aria-labelledby="moreAction1"
                                             >
                                                 <li class="dropdown-item">
-                                                    <a href="{% url 'inventario:delete_categoria' venta.pk %}"
+                                                    <a href="{% url 'inventario:delete_venta' venta.pk %}"
 
                                                        class="text-gray">Eliminar</a>
                                                 </li>
