--- a/templates/inventario/compras/addCompra.html
+++ b/templates/inventario/compras/addCompra.html
@@ -48,8 +48,9 @@
                             var filaPrincipal = $('<tr id=' + objeto.pk + '>');
                             filaPrincipal.append($('<td>').text(objeto.fields.descripcion).addClass('min-width')).append($('<input class="insumos[]" type="hidden" value=' + objeto.pk + '>'));
 
-                            filaPrincipal.append($('<td>').text(objeto.fields.precio_venta));
-                            filaPrincipal.append($('<td>').append($('<input type="number" value="1" min=0 max=' + objeto.fields.cantidad + ' name = cantidad_' + objeto.pk + ' id = id_cantidad_' + objeto.pk + ' class="form-control cantidad"  >')));
+                            filaPrincipal.append($('<td>').append($('<input type="number" value="1" min=1  stock =' + objeto.fields.cantidad + '  max=' + objeto.fields.maximo + ' pk = ' + objeto.pk + ' name = cantidad_' + objeto.pk + ' id = id_cantidad_' + objeto.pk + ' class="form-control cantidad"  >')));
+                            filaPrincipal.append($('<td>').append($('<input type="number" step="0.01" value="1" min=1 name = costo_' + objeto.pk + ' id = id_costo_' + objeto.pk + ' pk = ' + objeto.pk + ' class="form-control costo" value=' + objeto.fields.costo_unitario + ' >')));
+
                             filaPrincipal.append($('<td>').append($('<input type="text" name = total_' + objeto.pk + ' id = id_total_' + objeto.pk + ' class="form-control " disabled  >')));
 
                             filaPrincipal.append($('<td>').html(' <div class="action justify-content-center"> <a href="Javascript:void(0);" class="text-danger eliminar"><i class="lni lni-trash-can"></i> </a>  </div>'));
@@ -77,13 +78,49 @@
 
 
         });
-
         $(document).on('change', '.cantidad', function () {
             // Tu código para actualizar el subtotal aquí
-            cantidad = $(this).val()
-            costo = 0
+            cantidad = parseInt($(this).val())
+            stock = parseInt($(this).attr('stock'))
+
+            cantidad_maxima = $(this).attr('max')
+            if (cantidad + stock <= cantidad_maxima) {
+                pk = parseFloat($(this).attr('pk'))
+                costo = parseFloat($('#id_costo_' + pk).val()).toFixed(2)
+                tot = parseFloat(cantidad * costo).toFixed(2)
+                $('#id_total_' + pk).val(tot)
+            } else {
+                swal.fire("La cantidad solicita es mayor a la cantidad maxima configurada: " + cantidad_maxima)
+                $(this).val(1)
+                $('#id_total_' + pk).val(costo)
+            }
+            obtener_total_subtotal();
 
         });
+
+
+        $(document).on('change', '.costo', function () {
+            // Tu código para actualizar el subtotal aquí
+            costo = parseFloat($(this).val())
+            pk = parseFloat($(this).attr('pk'))
+            cantidad = parseFloat($('#id_cantidad_' + pk).val()).toFixed(2)
+            tot = parseFloat(cantidad * costo).toFixed(2)
+            $('#id_total_' + pk).val(tot)
+
+            obtener_total_subtotal();
+
+        });
+
+        function obtener_total_subtotal() {
+            acumulador = 0
+            $('#tablaPrincipal tr').not(':first').each(function () {
+                acumulador = acumulador + parseFloat($(this).find('td').eq(3).find('input').val())
+
+            });
+            $('#id_total_total').val(acumulador)
+            $('#id_total_hidden').val(acumulador)
+
+        }
 
 
     </script>
@@ -139,7 +176,7 @@
                 <form action="{% url 'inventario:add_compra' %}" method="POST">
                     {% csrf_token %}
                     <div class="row">
-
+                        <input type="hidden" name="total_hidden" id="id_total_hidden">
                         {% for field in form %}
                             <div class="{{ field.field.widget.attrs.col| default:"col-md-12" }}">
                                 <fieldset id="id_{{ field.name }}"
@@ -177,8 +214,8 @@
                             <thead class="table-light">
                             <tr>
                                 <th class="w-25">Insumo</th>
-                                <th class="w-25">Precio</th>
                                 <th class="w-25">Cantidad</th>
+                                <th class="w-25">Precio</th>
                                 <th class="w-25">SubTotal</th>
                                 <th>
                                     <div class="action justify-content-center">
