--- a/templates/inventario/compras/addCompra.html
+++ b/templates/inventario/compras/addCompra.html
@@ -46,10 +46,10 @@
 
                             // Agregar la información a la tabla principal
                             var filaPrincipal = $('<tr id=' + objeto.pk + '>');
-                            filaPrincipal.append($('<td>').text(objeto.fields.descripcion).addClass('min-width')).append($('<input class="insumos[]" type="hidden" value=' + objeto.pk + '>'));
+                            filaPrincipal.append($('<td>').text(objeto.fields.descripcion).addClass('min-width')).append($('<input name="insumos[]" type="hidden" value=' + objeto.pk + '>'));
 
-                            filaPrincipal.append($('<td>').append($('<input type="number" value="1" min=1  stock =' + objeto.fields.cantidad + '  max=' + objeto.fields.maximo + ' pk = ' + objeto.pk + ' name = cantidad_' + objeto.pk + ' id = id_cantidad_' + objeto.pk + ' class="form-control cantidad"  >')));
-                            filaPrincipal.append($('<td>').append($('<input type="number" step="0.01" value="1" min=1 name = costo_' + objeto.pk + ' id = id_costo_' + objeto.pk + ' pk = ' + objeto.pk + ' class="form-control costo" value=' + objeto.fields.costo_unitario + ' >')));
+                            filaPrincipal.append($('<td>').append($('<input type="number" value="1" min=1  stock =' + objeto.fields.cantidad + '  max=' + objeto.fields.maximo + ' pk = ' + objeto.pk + ' name = cantidad[] id = id_cantidad_' + objeto.pk + ' class="form-control cantidad"  >')));
+                            filaPrincipal.append($('<td>').append($('<input type="number" step="0.01" value="1" min=1 name = costo[] id = id_costo_' + objeto.pk + ' pk = ' + objeto.pk + ' class="form-control costo" value=' + objeto.fields.costo_unitario + ' >')));
 
                             filaPrincipal.append($('<td>').append($('<input type="text" name = total_' + objeto.pk + ' id = id_total_' + objeto.pk + ' class="form-control " disabled  >')));
 
