--- a/templates/inventario/ventas/salida_insumo_view.html
+++ b/templates/inventario/ventas/salida_insumo_view.html
@@ -122,10 +122,10 @@
 
                                                        class="text-gray">Eliminar</a>
                                                 </li>
-                                                <li class="dropdown-item">
-                                                    <a href="{% url 'inventario:edit_compra' venta.pk %}"
-                                                       class="text-gray">Editar</a>
-                                                </li>
+{#                                                <li class="dropdown-item">#}
+{#                                                    <a href="{% url 'inventario:edit_compra' venta.pk %}"#}
+{#                                                       class="text-gray">Editar</a>#}
+{#                                                </li>#}
                                             </ul>
                                         </div>
                                     </td>
