--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,89 +1,124 @@
-
 {% extends 'registration/base_registration.html' %}
 {% block title %}Login{% endblock %}
+{% load static %}
+{% block content %}
 
-{% block content%}
-<!-- ========== signin-section end ========== -->
-<div class="vh-100 d-flex justify-content-center align-items-center">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
-
-                <div class="d-flex justify-content-center py-4">
-                    <a href="{% url 'login' %}" class="logo d-flex align-items-center w-auto">
-                        <img src="assets/img/logo.png" alt="">
-                        <span class="d-none d-lg-block">Inventario</span>
-                    </a>
-                </div><!-- End Logo -->
-                <div class="row">
-                    {% if form.errors %}
-                        <div class="alert alert-danger" role="alert">
-                            <p>Tu usuario y/o contraseña no son los correctos. Por favor intente de nuevo.</p>
-                        </div>
-
-                    {% endif %}
-
-                    {% if next %}
-                        {% if user.is_authenticated %}
-                            <div class="alert alert-danger" role="alert">
-                                <p>Tu cuenta no tiene acceso a esta página. Para proceder,
-                                    por favor inicie sesión con una cuenta que tenga acceso.</p>
-                            </div>
-
-                        {% else %}
-
-                        {% endif %}
-                    {% endif %}
+    <section class="vh-100">
+        <div class="container-fluid h-custom">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-md-9 col-lg-6 col-xl-5">
+                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
+                         class="img-fluid" alt="Sample image">
                 </div>
+                <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+                    <!-- ========== signin-section end ========== -->
 
-                <div class="card mb-3">
+                    <div class="divider d-flex align-items-center my-4">
+                        <p class="text-center fw-bold mx-3 mb-0">Iniciar Sesión</p>
+                    </div>
+                    <div class=" d-flex flex-column align-items-center justify-content-center">
 
-                    <div class="card-body">
+                        <div class="row">
+                            {% if form.errors %}
+                                <div class="alert alert-danger" role="alert">
+                                    <p>Tu usuario y/o contraseña no son los correctos. Por favor intente de
+                                        nuevo.</p>
+                                </div>
 
-                        <div class="pt-4 pb-2">
-                            <h5 class="card-title text-center pb-0 fs-4">Inicia sesión con tu cuenta.</h5>
-                            <p class="text-center small">Ingresa tu usuario y contraseña.</p>
+                            {% endif %}
+
+                            {% if next %}
+                                {% if user.is_authenticated %}
+                                    <div class="alert alert-danger" role="alert">
+                                        <p>Tu cuenta no tiene acceso a esta página. Para proceder,
+                                            por favor inicie sesión con una cuenta que tenga acceso.</p>
+                                    </div>
+
+                                {% else %}
+
+                                {% endif %}
+                            {% endif %}
                         </div>
 
-                        <form class="row g-3 needs-validation" novalidate method="post" action="{% url 'login' %}">
-                            {% csrf_token %}
-                            <div class="col-12">
-                                <label for="username" class="form-label">Email</label>
-                                <div class="input-group has-validation">
-                                    <span class="input-group-text" id="inputGroupPrepend">@</span>
-                                    <input type="text" name="username" class="form-control" id="id_username" required>
-                                    <div class="invalid-feedback">Por favor ingrese su usuario.</div>
+                        <div class="card mb-3">
+
+                            <div class="card-body">
+
+                                <div class="pt-4 pb-2">
+
+                                    <p class="text-center small">Ingresa tu usuario y contraseña.</p>
                                 </div>
-                            </div>
 
-                            <div class="col-12">
-                                <label for="password" class="form-label">Password</label>
-                                <input type="password" name="password" class="form-control" id="id_password" required>
-                                <div class="invalid-feedback">Por favor ingrese su contraseña!</div>
-                            </div>
-                            <div class="col-12">
-                                <p class="small mb-0"> <a href="{% url 'password_reset' %}">¿olvido su contraseña?</a></p>
-                            </div>
+                                <form class="row g-3 needs-validation" novalidate method="post"
+                                      action="{% url 'login' %}">
+                                    {% csrf_token %}
+                                    <div class="col-12">
+                                        <label for="username" class="form-label">Email</label>
+                                        <div class="input-group has-validation">
+                                            <span class="input-group-text" id="inputGroupPrepend">@</span>
+                                            <input type="text" name="username" class="form-control"
+                                                   id="id_username" required>
+                                            <div class="invalid-feedback">Por favor ingrese su usuario.
+                                            </div>
+                                        </div>
+                                    </div>
 
-                            <div class="col-12">
+                                    <div class="col-12">
+                                        <label for="password" class="form-label">Password</label>
+                                        <input type="password" name="password" class="form-control"
+                                               id="id_password" required>
+                                        <div class="invalid-feedback">Por favor ingrese su contraseña!</div>
+                                    </div>
+                                    <div class="col-12">
+                                        <p class="small mb-0"><a href="{% url 'password_reset' %}">¿olvido
+                                            su contraseña?</a></p>
+                                    </div>
 
-                                <input type="submit" value="login" class="btn btn-primary w-100"/>
-                                <input type="hidden" name="next" value="{{ next }}"/>
+                                    <div class="col-12">
+
+                                        <input type="submit" value="login" class="btn btn-primary w-100"/>
+                                        <input type="hidden" name="next" value="{{ next }}"/>
+                                    </div>
+
+                                </form>
+
                             </div>
+                        </div>
 
-                        </form>
 
                     </div>
+
+
+                    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+                            class="bi bi-arrow-up-short"></i></a>
+
                 </div>
-
-
-
             </div>
         </div>
-    </div>
-</div>
+        <div
+                class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">
+            <!-- Copyright -->
+            <div class="text-white mb-3 mb-md-0">
+                Copyright © 2023. All rights reserved.
+            </div>
+            <!-- Copyright -->
 
-
-<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-        class="bi bi-arrow-up-short"></i></a>
+            <!-- Right -->
+            <div>
+                <a href="#!" class="text-white me-4">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="#!" class="text-white me-4">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a href="#!" class="text-white me-4">
+                    <i class="fab fa-google"></i>
+                </a>
+                <a href="#!" class="text-white">
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
+            </div>
+            <!-- Right -->
+        </div>
+    </section>
 {% endblock %}
