--- a/templates/inventario/compras/addCompra.html
+++ b/templates/inventario/compras/addCompra.html
@@ -2,6 +2,8 @@
 {% block title %}Insumos{% endblock %}
 {% block extra_head %}
     <script>
+
+
         function abrirFormularioModal(url) {
             $.ajax({
                 url: url,
@@ -51,12 +53,14 @@
                             filaPrincipal.append($('<td>').append($('<input type="number" value="1" min=1  stock =' + objeto.fields.cantidad + '  max=' + objeto.fields.maximo + ' pk = ' + objeto.pk + ' name = cantidad[] id = id_cantidad_' + objeto.pk + ' class="form-control cantidad"  >')));
                             filaPrincipal.append($('<td>').append($('<input type="number" step="0.01" value="1" min=1 name = costo[] id = id_costo_' + objeto.pk + ' pk = ' + objeto.pk + ' class="form-control costo" value=' + objeto.fields.costo_unitario + ' >')));
 
-                            filaPrincipal.append($('<td>').append($('<input type="text" name = total_' + objeto.pk + ' id = id_total_' + objeto.pk + ' class="form-control " disabled  >')));
+                            filaPrincipal.append($('<td>').append($('<input type="text" name = total_' + objeto.pk + ' id = id_total_' + objeto.pk + ' class="form-control " disabled  value="1" >')));
 
                             filaPrincipal.append($('<td>').html(' <div class="action justify-content-center"> <a href="Javascript:void(0);" class="text-danger eliminar"><i class="lni lni-trash-can"></i> </a>  </div>'));
                             $('#tablaPrincipal tbody').append(filaPrincipal);
                         });
                         fila.append($('<td>').append(boton));
+                        $('#id_total_total').val(1)
+                        $('#id_total_hidden').val(1)
                         resultados.append(fila);
                     });
                 },
@@ -74,6 +78,24 @@
 
             $('#tablaPrincipal').on('click', '.eliminar', function () {
                 $(this).closest('tr').remove();
+            });
+
+            var formulario = document.getElementById("miFormulario");
+            formulario.addEventListener("submit", function (event) {
+
+                var tabla = document.getElementById("tablaPrincipal");
+                if (tabla.rows.length > 1) {
+                    // La tabla tiene datos
+                } else {
+                    // La tabla está vacía
+                    swal.fire("Ingrese los insumos")
+                    event.preventDefault(); // previene el envío del formulario
+
+                }
+
+
+                // Coloca aquí tu código de validación de tabla
+
             });
 
 
@@ -173,7 +195,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 offset-lg-2">
-                <form action="{% url 'inventario:add_compra' %}" method="POST">
+                <form id="miFormulario" action="{% url 'inventario:add_compra' %}" method="POST">
                     {% csrf_token %}
                     <div class="row">
                         <input type="hidden" name="total_hidden" id="id_total_hidden">
@@ -298,3 +320,7 @@
 
 {% endblock %}
 
+<script>
+
+
+</script>
