--- a/templates/inventario/compras/entrada_insumo_view.html
+++ b/templates/inventario/compras/entrada_insumo_view.html
@@ -119,7 +119,7 @@
                                                     aria-labelledby="moreAction1"
                                             >
                                                 <li class="dropdown-item">
-                                                    <a href="{% url 'inventario:delete_categoria' compra.pk %}"
+                                                    <a href="{% url 'inventario:delete_compra' compra.pk %}"
 
                                                        class="text-gray">Eliminar</a>
                                                 </li>
