--- a/templates/administracion/modulo/view.html
+++ b/templates/administracion/modulo/view.html
@@ -23,10 +23,7 @@
                                 <a href="{% url 'home' %}">Home</a>
                             </li>
 
-                            <li class="breadcrumb-item ">
-                                <a href="{% url 'administracion:administracion' %}">Administración</a>
-                            </li>
-
+                       
                             <li class="breadcrumb-item active" aria-current="page">
                                 Módulos
                             </li>
@@ -91,7 +88,11 @@
 
                                 <tr>
                                     <td>
-                                        {{ forloop.counter }}
+                                        {{ forloop.counter }}<br>
+                                           <small><b>Usuario creación:</b> {{ cliente.usuario_creacion.obtener_persona | default:'Administrador'}}<br>
+                                            {% if cliente.usuario_modificacion %}
+                                                 <b>Usuario modificación:</b> {{ cliente.usuario_modificacion }}
+                                            {% endif %}</small>
                                     </td>
                                     <td>
                                         <p class="text-sm">{{ modulo.nombre }}</p>
