--- a/templates/inventario/unidadMedida/unidad_medida_view.html
+++ b/templates/inventario/unidadMedida/unidad_medida_view.html
@@ -105,7 +105,11 @@
                                 <tr>
 
                                     <td>
-                                        <p class="text-sm">{{ forloop.counter }}</p>
+                                        <p class="text-sm">{{ forloop.counter }}<br>
+                                           <small><b>Usuario creación:</b> {{ unidad_medida.usuario_creacion.obtener_persona | default:'Administrador'}}<br>
+                                            {% if unidad_medida.usuario_modificacion %}
+                                                 <b>Usuario modificación:</b> {{ unidad_medida.usuario_modificacion }}
+                                            {% endif %}</small></p>
                                     </td>
                                     <td>
                                         <p class="text-sm">{{ unidad_medida.descripcion }}</p>
